[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphics/enemies/ghost_bn.png" type="Texture" id=1]
[ext_resource path="res://core/ghost.gd" type="Script" id=2]
[ext_resource path="res://graphics/shaders/light.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "ghost"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="ghost" type="Sprite"]
texture = ExtResource( 1 )
hframes = 4
frame = 2
script = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "ghost"
anims/ghost = SubResource( 1 )

[node name="light" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.1
energy = 1.5

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource( 2 )

[node name="enabler" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -100, -100, 200, 200 )
process_parent = true
physics_process_parent = true
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="screen_entered" from="enabler" to="." method="_on_enabler_screen_entered"]
[connection signal="screen_exited" from="enabler" to="." method="_on_enabler_screen_exited"]
